--- a/scss/_richtext.scss
+++ b/scss/_richtext.scss
@@ -1,9 +1,19 @@
 .jmrich--text-inner {
+	h1, h2, h3, h4, h6 {
+		margin-bottom: 20px !important;
+		@include generateFont($jmMediumFont, 34px, false, $jmEgyptianBlueColor);
+	}
+	span{
+	    @include generateFont($jmFont, 18px, 25px, $jmDarkCharcoalColor);
+		strong{
+			@include generateFont($jmMediumFont, 18px, 25px, $jmDarkCharcoalColor);
+		}
+	}
 	h5 {
-		@include generateFont($jmMediumFont, 26px, false, $jmEgyptianBlueColor);
+		@include generateFont($jmMediumFont, 34px, false, $jmEgyptianBlueColor);
 	}
 	p {
-		padding-bottom: 10px;
+		padding-bottom: 10px !important;
 		@include generateFont($jmFont, 18px, 25px, $jmDarkCharcoalColor);
 		a {
 			color: $jmEgyptianBlueColor;
@@ -21,7 +31,18 @@
 	}
 }
 @media (max-width: 575.98px){
+	
 	.jmrich--text-inner {
+		h2 {
+			margin-bottom: 8px;
+			@include generateFont($jmMediumFont, 22px, false, $jmEgyptianBlueColor);
+		}
+		span{
+			@include generateFont($jmFont, 16px, 20px, $jmDarkCharcoalColor);
+			strong{
+				@include generateFont($jmMediumFont, 16px, 20px, $jmDarkCharcoalColor);
+			}
+		}
 		h5 {
 			@include generateFont($jmMediumFont, 22px, false, $jmEgyptianBlueColor);
 		}
